--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
+    "sequelize": "^3.30.4",
     "sqlite3": "^3.1.8",
     "vue": "^2.3.2"
   },
