--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.5.10",
-    "electron-sqlite": "^0.0.1",
     "jquery": "^3.2.1",
     "sequelize": "^3.30.4",
     "sqlite3": "^3.1.8",
     "vue": "^2.3.2"
   },
   "devDependencies": {
+    "electron-builder": "^17.3.1",
     "electron-packager": "^8.7.0",
     "electron-prebuilt": "^1.4.13"
   }
