--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.5.10",
     "jquery": "^3.2.1",
+    "node-uuid": "^1.4.8",
     "sequelize": "^3.30.4",
     "sqlite3": "^3.1.8",
     "vue": "^2.3.2"
