--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.3.2"
   },
   "devDependencies": {
+    "electron": "1.6.8",
     "electron-builder": "^17.3.1",
     "electron-packager": "^8.7.0",
     "electron-prebuilt": "^1.4.13"
