--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
         "es2015"
     ],
     "plugins": [
-        "add-module-exports",
+        "babel-plugin-add-module-exports",
         "transform-object-rest-spread"
     ]
 }
